Ignorar la carpeta local de datos de Azure

--- a/.gitignore
+++ b/.gitignore
@@ -95,5 +95,5 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,visualstudiocode
 
-# Directorio de pruebas
-pruebas/
+# Directorio de Azure (llaves SSH y cosas sensibles).
+azure/
